core/renderloop: take the output of the active window into account for vrr scheduling

If the active window is on a different output than the one the renderloop is for,
the scheduling logic would otherwise never schedule a repaint while adaptive sync
is active.

BUG: 480252