src/backends/x11/windowed/x11_windowed_output.cpp
@@ -135,7 +135,7 @@ void X11WindowedCursor::update(const QImage &image, const QPointF &hotspot)
 
 X11WindowedOutput::X11WindowedOutput(X11WindowedBackend *backend)
     : Output(backend)
-    , m_renderLoop(std::make_unique<RenderLoop>())
+    , m_renderLoop(std::make_unique<RenderLoop>(this))
     , m_backend(backend)
 {
     m_window = xcb_generate_id(m_backend->connection());
